--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         </div>
         <div class="abas-textos">
           <div class="aba-conteudo">
-            <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
+            <h3 class="aba-conteudo-titulo-principal">Terminar os meus cursos</h3>
             <h4 class="aba-conteudo-titulo-secundario">
               Tempo para completar o objetivo
             </h4>
           </div>
           <div class="aba-conteudo">
             <h3 class="aba-conteudo-titulo-principal">
-              Criar 5 projetos em Javascript
+              Fazer Enem e vestibular
             </h3>
             <h4 class="aba-conteudo-titulo-secundario">
               Tempo para completar o objetivo
@@ -33,7 +33,7 @@
           </div>
           <div class="aba-conteudo">
             <h3 class="aba-conteudo-titulo-principal">
-              Criar um portfolio com os meus 3 melhores projetos
+              Decidir a faculdade
             </h3>
             <h4 class="aba-conteudo-titulo-secundario">
               Tempo para completar o objetivo
@@ -41,7 +41,7 @@
           </div>
           <div class="aba-conteudo">
             <h3 class="aba-conteudo-titulo-principal">
-              Atualizar meu curriculo com os certificados da Alura
+              Receber os certificados dos cursos
             </h3>
             <h4 class="aba-conteudo-titulo-secundario">
               Tempo para completar o objetivo
