--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
         <div class="conteudo">
             <div class="botoes">
-                <button class="botao ativo">Cursos na Alura</button>
-                <button class="botao">Criar projetos em Javascript</button>
-                <button class="botao">Criar um portfolio</button>
-                <button class="botao">Atualizar meu currículo</button>
+                <button class="botao ativo">Terminar os cursos</button>
+                <button class="botao">Receber os certificados do curso</button>
+                <button class="botao">Decidir a faculdade </button>
+                <button class="botao">Fazer Enem e Vestibular</button>
             </div>
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
