--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Receber os certificados dos cursos</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Receber os certificados dos 2 cursos</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Decidir em qual faculdade entrar</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Decidir o que estudar e em qual instituição entrar</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                 </div>
                 <div class="aba-conteudo">
