--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <div class="aba-conteudo ativo">
                     <h3 class="aba-conteudo-titulo-principal">Terminar os cursos</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <div class="contador"></div>
                 </div>
                 <div class="aba-conteudo">
                     <h3 class="aba-conteudo-titulo-principal">Receber os certificados dos 2 cursos</h3>
@@ -30,10 +31,12 @@
                 <div class="aba-conteudo">
                     <h3 class="aba-conteudo-titulo-principal">Decidir o que estudar e em qual instituição entrar</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <div class="contador"></div>
                 </div>
                 <div class="aba-conteudo">
                     <h3 class="aba-conteudo-titulo-principal">Fazer Enem e Vestibular</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <div class="contador"></div>
                 </div>
             </div>
         </div>
