--- a/index.html
+++ b/index.html
@@ -51,11 +51,47 @@
                     <h3 class="aba-conteudo-titulo-principal">Decidir o que estudar e em qual instituição entrar</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador"></div>
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero">150</p>
+                        <p class="contador-digito-texto">dias</p>
+                    </div>
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero">8</p>
+                        <p class="contador-digito-texto">horas</p>
+                    </div>
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero">60</p>
+                        <p class="contador-digito-texto">min</p>
+                    </div>
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero">60</p>
+                        <p class="contador-digito-texto">seg</p>
+                    </div>
+                </div>
+            </div>
                 </div>
                 <div class="aba-conteudo">
                     <h3 class="aba-conteudo-titulo-principal">Fazer Enem e Vestibular</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador"></div>
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero">150</p>
+                        <p class="contador-digito-texto">dias</p>
+                    </div>
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero">8</p>
+                        <p class="contador-digito-texto">horas</p>
+                    </div>
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero">60</p>
+                        <p class="contador-digito-texto">min</p>
+                    </div>
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero">60</p>
+                        <p class="contador-digito-texto">seg</p>
+                    </div>
+                </div>
+            </div>
                 </div>
             </div>
         </div>
