--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <section class="conteudo-principal">
-        <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
+        <h2 class="titulo-principal">Meus objetivos do ano<span>_</span></h2>
         <div class="conteudo">
             <div class="botoes">
                 <button class="botao ativo">Terminar os cursos</button>
@@ -25,7 +25,7 @@
                     <div class="contador"></div>
                     <div class="contador">
                         <div class="contador-digito">
-                            <p class="contador-digito-numero">150</p>
+                            <p class="contador-digito-numero"id="seg0"></p>
                             <p class="contador-digito-texto">dias</p>
                         </div>
                         <div class="contador-digito">
@@ -46,6 +46,25 @@
                 <div class="aba-conteudo">
                     <h3 class="aba-conteudo-titulo-principal">Receber os certificados dos 2 cursos</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <div class="contador"></div>
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero">150</p>
+                        <p class="contador-digito-texto">dias</p>
+                    </div>
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero">8</p>
+                        <p class="contador-digito-texto">horas</p>
+                    </div>
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero">60</p>
+                        <p class="contador-digito-texto">min</p>
+                    </div>
+                    <div class="contador-digito">
+                        <p class="contador-digito-numero">60</p>
+                        <p class="contador-digito-texto">seg</p>
+                    </div>
+                </div>
+            </div>
                 </div>
                 <div class="aba-conteudo">
                     <h3 class="aba-conteudo-titulo-principal">Decidir o que estudar e em qual instituição entrar</h3>
