--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
                             <p class="contador-digito-texto">dias</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero">8</p>
+                            <p class="contador-digito-numero"></p>
                             <p class="contador-digito-texto">horas</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero">60</p>
+                            <p class="contador-digito-numero"></p>
                             <p class="contador-digito-texto">min</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero">60</p>
+                            <p class="contador-digito-numero"></p>
                             <p class="contador-digito-texto">seg</p>
                         </div>
                     </div>
@@ -48,19 +48,19 @@
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador"></div>
                     <div class="contador-digito">
-                        <p class="contador-digito-numero">150</p>
+                        <p class="contador-digito-numero"></p>
                         <p class="contador-digito-texto">dias</p>
                     </div>
                     <div class="contador-digito">
-                        <p class="contador-digito-numero">8</p>
+                        <p class="contador-digito-numero"></p>
                         <p class="contador-digito-texto">horas</p>
                     </div>
                     <div class="contador-digito">
-                        <p class="contador-digito-numero">60</p>
+                        <p class="contador-digito-numero"></p>
                         <p class="contador-digito-texto">min</p>
                     </div>
                     <div class="contador-digito">
-                        <p class="contador-digito-numero">60</p>
+                        <p class="contador-digito-numero"></p>
                         <p class="contador-digito-texto">seg</p>
                     </div>
                 </div>
@@ -71,19 +71,19 @@
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador"></div>
                     <div class="contador-digito">
-                        <p class="contador-digito-numero">150</p>
+                        <p class="contador-digito-numero"></p>
                         <p class="contador-digito-texto">dias</p>
                     </div>
                     <div class="contador-digito">
-                        <p class="contador-digito-numero">8</p>
+                        <p class="contador-digito-numero"></p>
                         <p class="contador-digito-texto">horas</p>
                     </div>
                     <div class="contador-digito">
-                        <p class="contador-digito-numero">60</p>
+                        <p class="contador-digito-numero"></p>
                         <p class="contador-digito-texto">min</p>
                     </div>
                     <div class="contador-digito">
-                        <p class="contador-digito-numero">60</p>
+                        <p class="contador-digito-numero"></p>
                         <p class="contador-digito-texto">seg</p>
                     </div>
                 </div>
