--- a/index.html
+++ b/index.html
@@ -23,13 +23,15 @@
                     <h3 class="aba-conteudo-titulo-principal">Terminar os cursos</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador"></div>
-                    <div class="contador">
+                        <div class="contador">
+                            <p>Olá contador</p>
+                          </div>
                         <div class="contador-digito">
                             <p class="contador-digito-numero"id="seg0"></p>
                             <p class="contador-digito-texto">dias</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero"></p>
+                            <p class="contador-digito-numero">7</p>
                             <p class="contador-digito-texto">horas</p>
                         </div>
                         <div class="contador-digito">
