--- a/index.html
+++ b/index.html
@@ -13,106 +13,99 @@
         <h2 class="titulo-principal">Meus objetivos do ano<span>_</span></h2>
         <div class="conteudo">
             <div class="botoes">
-                <button class="botao ativo">Terminar os cursos</button>
-                <button class="botao">Receber os certificados do curso</button>
-                <button class="botao">Decidir a faculdade </button>
-                <button class="botao">Fazer Enem e Vestibular</button>
+                <button class="botao ativo">Terminar o curso</button>
+                <button class="botao">Receber o certificado do curso</button>
+                <button class="botao">Decidir a faculdade</button>
+                <button class="botao">Fazer o Enem e Vestibular</button>
             </div>
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
-                    <h3 class="aba-conteudo-titulo-principal">Terminar os cursos</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Terminar os meus dois cursos</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-                    <div class="contador"></div>
-                        <div class="contador">
-                            <p>Olá contador</p>
-                          </div>
+                    <div class="contador">
                         <div class="contador-digito">
-                            <p class="contador-digito-numero"id="seg0"></p>
+                            <p class="contador-digito-numero" id="dias0"></p>
                             <p class="contador-digito-texto">dias</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero">100</p>
+                            <p class="contador-digito-numero" id="horas0"></p>
                             <p class="contador-digito-texto">horas</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero">50</p>
+                            <p class="contador-digito-numero" id="min0"></p>
                             <p class="contador-digito-texto">min</p>
                         </div>
                         <div class="contador-digito">
-                            <p class="contador-digito-numero">40</p>
+                            <p class="contador-digito-numero" id="seg0"></p>
                             <p class="contador-digito-texto">seg</p>
                         </div>
                     </div>
                 </div>
+                <div class="aba-conteudo">
+                    <h3 class="aba-conteudo-titulo-principal">Receber o certificado dos dois cursos</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <div class="contador">
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="dias1"></p>
+                            <p class="contador-digito-texto">dias</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="horas1"></p>
+                            <p class="contador-digito-texto">horas</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="min1"></p>
+                            <p class="contador-digito-texto">min</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="seg1"></p>
+                            <p class="contador-digito-texto">seg</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Receber os certificados dos 2 cursos</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Decidir em qual instituição estudar/h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-                    <div class="contador"></div>
-                    <div class="contador-digito">
-                        <p class="contador-digito-numero"></p>
-                        <p class="contador-digito-texto">dias</p>
+                    <div class="contador">
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="dias2"></p>
+                            <p class="contador-digito-texto">dias</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="horas2"></p>
+                            <p class="contador-digito-texto">horas</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="min2"></p>
+                            <p class="contador-digito-texto">min</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="seg2"></p>
+                            <p class="contador-digito-texto">seg</p>
+                        </div>
                     </div>
-                    <div class="contador-digito">
-                        <p class="contador-digito-numero"></p>
-                        <p class="contador-digito-texto">horas</p>
-                    </div>
-                    <div class="contador-digito">
-                        <p class="contador-digito-numero"></p>
-                        <p class="contador-digito-texto">min</p>
-                    </div>
-                    <div class="contador-digito">
-                        <p class="contador-digito-numero"></p>
-                        <p class="contador-digito-texto">seg</p>
-                    </div>
-                </div>
-            </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Decidir o que estudar e em qual instituição entrar</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Fazer o Enem e Vestibular</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-                    <div class="contador"></div>
-                    <div class="contador-digito">
-                        <p class="contador-digito-numero">200</p>
-                        <p class="contador-digito-texto">dias</p>
+                    <div class="contador">
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="dias3"></p>
+                            <p class="contador-digito-texto">dias</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="horas3"></p>
+                            <p class="contador-digito-texto">horas</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="min3"></p>
+                            <p class="contador-digito-texto">min</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="seg3"></p>
+                            <p class="contador-digito-texto">seg</p>
+                        </div>
                     </div>
-                    <div class="contador-digito">
-                        <p class="contador-digito-numero">8</p>
-                        <p class="contador-digito-texto">horas</p>
-                    </div>
-                    <div class="contador-digito">
-                        <p class="contador-digito-numero">60</p>
-                        <p class="contador-digito-texto">min</p>
-                    </div>
-                    <div class="contador-digito">
-                        <p class="contador-digito-numero">50</p>
-                        <p class="contador-digito-texto">seg</p>
-                    </div>
-                </div>
-            </div>
-                </div>
-                <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Fazer Enem e Vestibular</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-                    <div class="contador"></div>
-                    <div class="contador-digito">
-                        <p class="contador-digito-numero">150</p>
-                        <p class="contador-digito-texto">dias</p>
-                    </div>
-                    <div class="contador-digito">
-                        <p class="contador-digito-numero">8</p>
-                        <p class="contador-digito-texto">horas</p>
-                    </div>
-                    <div class="contador-digito">
-                        <p class="contador-digito-numero">60</p>
-                        <p class="contador-digito-texto">min</p>
-                    </div>
-                    <div class="contador-digito">
-                        <p class="contador-digito-numero">60</p>
-                        <p class="contador-digito-texto">seg</p>
-                    </div>
-                </div>
-            </div>
                 </div>
             </div>
         </div>
